terraform-psql/modules/nacl/main.tf
resource "aws_network_acl" "pub_nacl" {
  vpc_id = var.vpc_id
  subnet_ids = [var.public_subnet1_id, var.public_subnet2_id]

  ingress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  egress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  tags = {
    Name = "pub-nacl"
  }
}

resource "aws_network_acl" "pvt_nacl" {
  vpc_id = var.vpc_id
  subnet_ids = [var.private_subnet1_id, var.private_subnet2_id]

  ingress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  egress {
    protocol   = "-1"
    rule_no    = 100
    action     = "allow"
    cidr_block = "0.0.0.0/0"
    from_port  = 0
    to_port    = 0
  }

  tags = {
    Name = "pvt-nacl"
  }
}
